# CMAKE-OpenGL-Template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/glad/include/glad/: gl.h
